<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/containerPadding"
    tools:context=".activities.CO2CalcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/co2calc_title_string"
        android:textAlignment="center"
        android:textColor="@color/onBackground"
        android:textSize="@dimen/titleSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/componentMargin"
                android:gravity="center"
                android:padding="@dimen/componentPadding"
                android:text="@string/co2calc_fromto_label"
                android:textAlignment="center"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/textSize" />

            <ToggleButton
                android:id="@+id/co2calc_homeschool_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/componentMargin"
                android:background="@color/surface"
                android:padding="@dimen/componentPadding"
                android:textColor="@color/onSurface"
                android:textOff="@string/co2calc_school_toggle"
                android:textOn="@string/co2calc_home_toggle"
                android:textSize="@dimen/buttonTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/componentMargin"
                android:gravity="center"
                android:padding="@dimen/componentPadding"
                android:text="@string/co2calc_travelmode_label"
                android:textAlignment="center"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/textSize" />

            <Spinner
                android:id="@+id/co2calc_travelmode_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/componentMargin"
                android:background="@color/surface"
                android:backgroundTint="@color/surface"
                android:padding="@dimen/componentPadding" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/componentMargin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/componentPadding"
                        android:text="@string/co2calc_co2_label"
                        android:textAlignment="center"
                        android:textColor="@color/onBackground"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/componentMargin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/componentPadding"
                        android:text="@string/co2calc_trees_label"
                        android:textAlignment="center"
                        android:textColor="@color/onBackground"
                        android:textSize="@dimen/textSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/co2calc_totalco2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/componentMargin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/componentPadding"
                        android:text="Placeholder"
                        android:textAlignment="center"
                        android:textColor="@color/onBackground"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:id="@+id/co2calc_trees"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/componentMargin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/componentPadding"
                        android:text="Placeholder"
                        android:textAlignment="center"
                        android:textColor="@color/onBackground"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>